--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="./script.js" defer></script>
     <title>Projeto API</title>
 </head>
 <body>
     <div class="box">
         <h1>Cadastro</h1>
         <form action="">
-        <input type="text" name="nome" placeholder="Nome">
-        <input type="text" name="email" placeholder="Email">
-        <input type="password" name="senha" placeholder="Senha">
-        <input type="text" name="tel" placeholder="Telefone">
+        <input type="text" class="nome" name="nome" placeholder="Nome">
+        <input type="text" class="email" name="email" placeholder="Email">
+        <input type="password" class="senha" name="senha" placeholder="Senha">
+        <input type="text" class="tel" name="tel" placeholder="Telefone">
         <button>Cadastro</button>
     </form>
    </div>
